# cards

./: main.py  pyproject.toml
cards/: card.py  common.py  db.py  img.py
cards/data/: .gitignore  README.md  VERSION
